--- a/main.html
+++ b/main.html
@@ -7,7 +7,46 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+		<form>
+			<lable for="name">Name</lable>
+			<input type ="text" id="name" required;>
+			
+			<lable for="name">Email</lable>
+			<input type ="email"id="email"required;>
+			
+			<lable for="name">gender</lable>
+			<input type ="radio" name="gender"id="m"required>male
+			<input type ="radio" name="gender"id="f"required>female
+
+			
+			<lable for="cars">Car Brands </lable>
+			<select id="cars"required>
+				<option>BMW</option>
+				<option>Audi</option>
+				<option>Mercerdez</option>
+			</select>
+			
+			
+			<lable for="name">Age</lable>
+			<input type ="number"required;>
+			
+			<lable for="dob">DOB</lable>
+			<input type ="date"id="dob"required;>
+
+			<lable for="phone">Phone Number</lable>
+			<input type ="tel"id="tel";>
+			
+			<lable for="Password">Password</lable>
+			<input type ="Password"id="pass"required;>
+
+			<lable for="checkbox">Checkbox</lable>
+			<input type ="checkbox"required;>
+			<label for="tos">I agree to the TOS</label>
+
+			<button type="submit">submit</button>
+		</form>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
